--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1114,6 +1114,61 @@ p {
 	color: var(--primary);
 }
 
+.profile-section {
+	display: flex;
+	align-items: center;
+	margin-bottom: 15px;
+  }
+  
+  .profile-link {
+	display: flex;
+	align-items: center;
+	text-decoration: none;
+	color: inherit;
+  }
+  
+  .profile-image {
+	width: 54px;
+	height: 54px;
+	border-radius: 50%;
+	margin-right: 10px;
+	object-fit: cover;
+  }
+  
+  .profile-info {
+	display: flex;
+	flex-direction: column;
+  }
+  
+  .profile-name {
+	font-weight: bold;
+	margin-bottom: 5px;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	transition: color 0.3s ease;
+	color: var(--black); /* Menggunakan warna hitam dari root */
+  }
+  .dark-mode .profile-name {
+	color: var(--dark-theme-white);
+  }
+  
+  .profile-link:hover .profile-name {
+	color: #4770ff; /* Warna LinkedIn biru */
+  }
+  
+  .linkedin-icon {
+	width: 16px;
+	height: 16px;
+	stroke: currentColor;
+	cursor: pointer;
+  }
+  
+  .profile-position {
+	color: #666;
+	font-size: 0.9em;
+  }
+
 .content-box-card .awards-recognitions {
 	margin-top: 50px;
 }
@@ -2329,6 +2384,20 @@ p {
 .dark-theme .content-box-card .client-feedback .feedback-item .designation p span {
 	color: var(--dark-theme-white);
 }
+.dark-theme .profile-name {
+  color: var(--dark-theme-white) !important;
+}
+
+.dark-theme .profile-position {
+  color: var(--dark-theme-light-white) !important;
+}
+
+.dark-theme .linkedin-icon {
+  stroke: var(--dark-theme-white);
+}
+.dark-theme .profile-link:hover .profile-name {
+	color: #4770ff; /* Warna LinkedIn biru */
+  }
 
 .dark-theme .content-box-card .awards-recognitions .awards-item {
 	background-color: var(--dark-theme-black);
